--- a/class_project _class/class_project _class.csproj
+++ b/class_project _class/class_project _class.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.21" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.21" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.21" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.21" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.21" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.21" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
@@ -21,14 +22,6 @@
     <ProjectReference Include="..\project_data\project_data.csproj" />
     <ProjectReference Include="..\Project_model\Project_model.csproj" />
     <ProjectReference Include="..\Projrct_unite\Projrct_unite.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Areas\Admin\Controllers\" />
-    <Folder Include="Areas\Admin\Views\" />
-    <Folder Include="Areas\customer\Data\" />
-    <Folder Include="Areas\customer\Models\" />
-    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
