--- a/class_project _class/appsettings.json
+++ b/class_project _class/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspclass1;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspclass1;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "class_project__classContextConnection": "Server=(localdb)\\mssqllocaldb;Database=class_project _class;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
