--- a/class_project _class/class_project _class.csproj
+++ b/class_project _class/class_project _class.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="6.0.26" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.21" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.26" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.26" />
@@ -29,6 +30,14 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\Image\Product\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EditorConfigFiles Remove="C:\Users\Mohit Sharma\Desktop\class_project _class\class_project _class\Areas\.editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="C:\Users\Mohit Sharma\Desktop\class_project _class\class_project _class\Areas\.editorconfig" />
   </ItemGroup>
 
 </Project>
